--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Maged's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3><a href="./redone/ranking.html">Top 3 Anime Project</a></h3>
+    <h3><a href="./ReDone/ranking.html">Top 3 Anime Project</a></h3>
         <img src="./ReDone/Ranking.png" alt="Ranking">
     <hr>
     <h3><a href="./ReDone/birthday.html">Birthday Invite Project</a></h3>
